# ldth-2025-drone

./: Cargo.toml  README.md  flake.nix  pyproject.toml
py-src/ldth_drone/: drone.py
src/: main.rs
